--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 	</head>
 	
 	<body>
-		<!Cabeçalho!>
-		<header class="container">	
-		
+		<!--Cabeçalho-->
+		<header class="container">			
 			<!--[if lt IE 9]>
 				<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 			<![endif]-->		
 			<h1>
-				<img src="img/logo.png" alt="Mirror Fashion">
+				<a href="#">
+					<img src="img/logo.png" alt="Mirror Fashion">
+				</a>
 			</h1>
 			<p class="sacola">Nenhum item na sacola de compras</p>
 			<nav class="menu-opcoes #menu-cabecalho">
@@ -30,10 +31,10 @@
 			</nav>
 		</header>
 		
-		<!Pesquisa itens da loja, departamentos da loja e banner // MENU E DESTAQUE!>
+		<!--Pesquisa itens da loja, departamentos da loja e banner // MENU E DESTAQUE-->
 		<div class="container destaque">		
 			<section class="busca">
-				<!Form que realiza busca!>
+				<!--Form que realiza busca-->
 				<h2>Busca</h2>	
 				<form>
 					<input type="search">
@@ -41,7 +42,7 @@
 				</form>
 			</section>
 			<section class="menu-departamentos">
-				<!Cria o menu de departamentos!>
+				<!--Cria o menu de departamentos-->
 				<h2>Departamentos</h2>
 				<nav>
 					<ul>
@@ -64,21 +65,21 @@
 				</nav>
 			</section>
 			<section class="banner-destaque">
-				<!Banner de destaque!>
+				<!--Banner de destaque-->
 				<figure>
 					<img src="img/destaque-home.png" alt="Promoção: Big City Night">
 				</figure>
 			</section>			
 		</div>
 		
-		<!Painel de novidades e mais vendidos!>
+		<!--Painel de novidades e mais vendidos-->
 		<div class="container paineis">	
-			<!Novidades!>
+			<!--Novidades-->
 			<section class="painel novidades">
 				<h2>Novidades</h2>
 				<ol>
 					<li>
-					<!Produto!>
+					<!--Produto-->
 						<a href="produto1.html">
 							<figure>
 								<img src="img/produtos/miniatura1.png" alt="miniatura1">
@@ -129,12 +130,12 @@
 				</ol>			
 			</section>
 			
-			<!Mais Vendidos!>
+			<!--Mais Vendidos-->
 			<section class="painel mais-vendidos">
 				<h2>Mais Vendidos</h2>
 				<ol>
 					<li>
-					<!Produtos!>
+					<!--Produtos-->
 						<a href="produto7.html">
 							<figure>
 								<img src="img/produtos/miniatura7.png" alt="miniatura7">
@@ -186,7 +187,7 @@
 			</section>
 		</div>
 		
-		<!Rodapé!>
+		<!--Rodapé-->
 		<footer>
 			<div class="container">
 				<img src="img/logo-rodape.png" alt="Logo da Mirror Fashion">
