ajustes finais mobile

--- a/sobre.html
+++ b/sobre.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
 		<title>Sobre a Mirror Fashion</title>
 		<link rel="stylesheet" href="css/sobre.css">						
 	</head>
@@ -112,8 +113,7 @@
 		<footer>
 			<div class="container">
 				<img src="img/logo-rodape.png" alt="Logo da Mirror Fashion">
-				&copy; Copyright Mirror Fashion
-		
+						
 				<ul class="social">
 					<li><a href="http://facebook.com/mirrorfashion">Facebook</a></li>
 					<li><a href="http://twitter.com/mirrorfashion">Twitter</a></li>
