Ajustes + Montagem da pagina de produtos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				</a>
 			</h1>
 			<p class="sacola">Nenhum item na sacola de compras</p>
-			<nav class="menu-opcoes #menu-cabecalho">
+			<nav class="menu-opcoes">
 				<ul>
 					<li><a href="#">Sua Conta</a></li>
 					<li><a href="#">Lista de Desejos</a></li>
@@ -72,7 +72,7 @@
 		</div>
 		
 		<!--Painel de novidades e mais vendidos-->
-		<div class="container paineis">	
+		<div class="container">	
 			<!--Novidades-->
 			<section class="painel novidades">
 				<h2>Novidades</h2>
