--- a/sobre.html
+++ b/sobre.html
@@ -20,7 +20,7 @@
 				<p class="sacola">Nenhum item na sacola de compras</p>
 			</div>
 			<div>
-				<nav class="menu-opcoes #menu-cabecalho">
+				<nav class="menu-opcoes">
 					<ul>
 						<li><a href="#">Sua Conta</a></li>
 						<li><a href="#">Lista de Desejos</a></li>
