--- a/produto.html
+++ b/produto.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/produto.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/reset.css">
     <title>Mirror Fashion</title>
@@ -11,7 +12,9 @@
     <!--header-->
     <header class="container">
         <h1>
-            <img src="img/logo.png" alt="Logo Mirror Fashion">
+            <a href="index.html">
+                <img src="img/logo.png" alt="Mirror Fashion">
+            </a>
         </h1>
         <p class="sacola">
             Nenhum item na sacola de compras
@@ -28,40 +31,81 @@
     </header>
 
     <!--produto-->
-    <div class="produto">
-        <h1>Fuzzy Cardigan</h1>
-        <p>por apenas R$129,90</p>
+    <div class="produto-back">
+        <div class="container">
+            <div class="produto">
+                <h1>Fuzzy Cardigan</h1>
+                <p>por apenas R$129,90</p>
+                <form action="">
+                    <fieldset class="cores">
+                        <legend>Escolha a cor:</legend>
 
-        <form action="">
-            <fieldset class="cores">
-                <legend>Escolha a cor:</legend>
+                        <input type="radio" name="cor" value="verde" id="verde" checked>
+                        <label for="verde">
+                            <img src="img/produtos/foto1-verde.png" alt="Produto da cor verde">
+                        </label>
 
-                <input type="radio" name="cor" value="verde" id="verd" checked>
-                <label for="verde">
-                    <img src="img/produtos/foto1-verde.png" alt="Produto da cor verde">
-                </label>
+                        <input type="radio" name="cor" value="rosa" id="rosa">
+                        <label for="rosa">
+                            <img src="img/produtos/foto1-rosa.png" alt="Produto da cor rosa">
+                        </label>
 
-                <input type="radio" name="cor" value="rosa" id="rosa">
-                <label for="rosa">
-                    <img src="img/produtos/foto1-rosa.png" alt="Produto da cor rosa">
-                </label>
-
-                <input type="radio" name="cor" value="azul" id="azul">
-                <label for="azul">
-                    <img src="img/produtos/foto1-azul.png" alt="Produto da cor azul">
-                </label>
-            </fieldset>
-            <button class="comprar">Comprar</button>
-        </form>
+                        <input type="radio" name="cor" value="azul" id="azul">
+                        <label for="azul">
+                            <img src="img/produtos/foto1-azul.png" alt="Produto da cor azul">
+                        </label>
+                    </fieldset>
+                    <fieldset class="tamanho">
+                        <legend>Escolha o tamanho</legend>
+                        <input type="range" min="36" max="46" value="42" step="2" name="tamanho" id="tamanho">
+                    </fieldset>
+                    <button class="comprar">Comprar</button>
+                </form>
+            </div>
+            <div class="detalhes">
+                <h2>Detalhes do produto</h2>
+                <p>
+                    Esse é o melhor casado de Cardigã que você ja viu. Excelente
+                    material italiano com estampa desenhada pelos artesãos da comunidade
+                    de Krotor nas ilhas gregas. Compre já e receba hoje mesmo pela nossa 
+                    entreha a jato.
+                </p>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Caracteristica</th>
+                            <th>Detalhe</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Modelo</td>
+                            <td>Cardigã 7845</td>
+                        </tr>
+                        <tr>
+                            <td>Material</td>
+                            <td>Algodão e poliester</td>
+                        </tr>
+                        <tr>
+                            <td>Cores</td>
+                            <td>Azul, Rosa e Verde</td>
+                        </tr>
+                        <tr>
+                            <td>Lavagem</td>
+                            <td>Lavar a mão</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
-
     <!--footer-->
     <footer>
         <div class="container">
             <img src="img/logo-rodape.png" alt="Logo Mirror Fashion">
             <ul class="social">
-                <li><a href="http://facebook.com/mirrorfashion"></a>Facebook</li>
-                <li><a href="http://twitter.com/mirrorfashion">Twitter</a></li>
+                <li><a href="http://facebook.com/mirrorfashion"></a></li>
+                <li><a href="http://twitter.com/mirrorfashion"></a></li>
                 <li><a href="http://plus.google.com/mirrorfashion"></a></li>
             </ul>
         </div>
