--- a/checkout.html
+++ b/checkout.html
@@ -3,90 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/open-iconic-master/font/css/open-iconic-bootstrap.css">
+
     <title>Checkout Mirror Fashion</title>
 </head>
 <body>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Ótima escolha!</h1>
-            <p class="lead"> 
-                Obrigado por comprar na Mirror Fashion!
-                Preencha seus dados para efetivar a compra
-            </p>
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent">
+           <span class="navbar-toggler-icon"></span>
+       </button>
+       <a href="index.html" class="navbar-brand">Mirror Fashion</a>
+       <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a href="sobre.html" class="nav-link">Sobre</a>                
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Ajuda</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Perguntas Frequentes</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Entre em Contato</a>
+                </li>            
+            </ul>
         </div>
-    </div>
+   </nav>
     <div class="container">
-        <div class="card mb-3">
-            <div class="card-header">
-                Sua compra
+        <div class="row">
+            <div class="col-md-12 pt-3">
+                <div class="jumbotron jumbotron-fluid">
+                    <h1 class="display-4 text-center">Ótima escolha!</h1>
+                        <p class="lead text-center"> 
+                            Obrigado por comprar na Mirror Fashion!
+                            Preencha seus dados para efetivar a compra
+                        </p>
+                </div>
             </div>
-            <div class="card-body">
-                <img src="img/produtos/foto1-verde.png" alt="Fuzzy Cardigan" class="img-thumbnail mb-3">
-                <dl>
-                    <dt>Produto</dt>
-                    <dd>Fuzzy Cardigan</dd>
-                    <dt>Cor</dt>
-                    <dd>Verde</dd>
-                    <dt>Tamanho</dt>
-                    <dd>40</dd>
-                    <dt>Preço</dt>
-                    <dd>R$129,90</dd>
-                </dl>
+        </div> 
+        <div class="row">         
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="card-header">
+                        Sua compra
+                    </div>
+                    <div class="card-body">
+                        <img src="img/produtos/foto1-verde.png" alt="Fuzzy Cardigan" class="img-thumbnail mb-3 img-fluid d-none d-sm-block">
+                        <dl>
+                            <dt>Produto</dt>
+                            <dd>Fuzzy Cardigan</dd>
+                            <dt>Cor</dt>
+                            <dd>Verde</dd>
+                            <dt>Tamanho</dt>
+                            <dd>40</dd>
+                            <dt>Preço</dt>
+                            <dd>R$129,90</dd>
+                        </dl>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div>
-            <form>
-                <fieldset>
-                    <legend>Dados pessoais</legend>
-                    <div class="form-group">
-                        <label for="nome">Nome completo</label>
-                        <input type="text" class="form-control" id="nome" name="nome" autofocus>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">E-mail</label>
-                        <input type="text" class="form-control" id="email" name="email" placeholder="email@exemplo.com">
-                    </div>
-                    <div class="form-group">
-                        <label for="cpf">CPF</label>
-                        <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000.00">
-                    </div>
-                    <div class="form-group custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="newsletter" value="sim" checked>
-                        <label for="newsletter" class="custom-control-label">Quero receber Newsletter da Mirror Fashion</label>
-                    </div>
-                </fieldset>
-                <fieldset>
-                    <legend>Dados de pagamento</legend>
-                    <div class="form-group">
-                        <label for="numero-cartao">Número - CVV</label>
-                        <input type="text" class="form-control" id="numero-cartao" name="numero-cartao" placeholder="0000 0000 0000 0000 - 000">
-                    </div>
-                    <div class="form-group">
-                        <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <label for="bandeira-cartao" class="input-group-text">Bandeira</label>
-                            </div>                                                
-                            <select class="custom-select" id="bandeira-cartao">
-                                <option disabled selected >Selecione uma opção...</option>
-                                <option value="master">MasterCard</option>
-                                <option value="visa">VISA</option>
-                                <option value="amex">American Express</option>
-                            </select>
+            <div class="col-md-6">       
+                <form>
+                    <fieldset>
+                        <legend>Dados pessoais</legend>
+                        <div class="form-group">
+                            <label for="nome">Nome completo</label>
+                            <input type="text" class="form-control" id="nome" name="nome" autofocus required>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="validade-cartao">Validade</label>
-                        <input type="month" class="form-control"  id="validade-cartao" name="validade-cartao">
-                    </div>
-                </fieldset>
-                <button type="submit" class="btn btn-primary">
-                    <span class="oi oi-thumb-up"></span>
-                    Confirmar Pedido
-                </button>
-            </form>
+                        <div class="form-group">
+                            <label for="email">E-mail</label>
+                            <input type="text" class="form-control" id="email" name="email" placeholder="email@exemplo.com" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="cpf">CPF</label>
+                            <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000.00">
+                        </div>
+                        <div class="form-group custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="newsletter" value="sim" checked>
+                            <label for="newsletter" class="custom-control-label">Quero receber Newsletter da Mirror Fashion</label>
+                        </div>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Dados de pagamento</legend>
+                        <div class="form-group">
+                            <label for="numero-cartao">Número do cartão - CVV</label>
+                            <input type="text" class="form-control" id="numero-cartao" name="numero-cartao" placeholder="0000 0000 0000 0000 - 000">
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <label for="bandeira-cartao" class="input-group-text">Bandeira</label>
+                                </div>                                                
+                                <select class="custom-select" id="bandeira-cartao">
+                                    <option disabled selected >Selecione uma opção...</option>
+                                    <option value="master">MasterCard</option>
+                                    <option value="visa">VISA</option>
+                                    <option value="amex">American Express</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="validade-cartao">Validade</label>
+                            <input type="month" class="form-control"  id="validade-cartao" name="validade-cartao">
+                        </div>
+                    </fieldset>
+                    <button type="submit" class="btn btn-primary">
+                        <span class="oi oi-thumb-up"></span>
+                        Confirmar Pedido
+                    </button>
+                </form>
+            </div>
         </div>        
     </div>
+
+
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
 </html>
