--- a/produto.html
+++ b/produto.html
@@ -9,6 +9,7 @@
     <title>Mirror Fashion</title>
 </head>
 <body>
+
     <!--header-->
     <header class="container">
         <h1>
@@ -58,6 +59,7 @@
                     <fieldset class="tamanho">
                         <legend>Escolha o tamanho</legend>
                         <input type="range" min="36" max="46" value="42" step="2" name="tamanho" id="tamanho">
+                        <output for="tamanho" name="valorTamanho">42</output>                        
                     </fieldset>
                     <button class="comprar">Comprar</button>
                 </form>
@@ -110,5 +112,8 @@
             </ul>
         </div>
     </footer>
+
+    <script type="text/javascript" src="js/produto.js"></script>
+    
 </body>
 </html>
