--- a/checkout.html
+++ b/checkout.html
@@ -37,10 +37,10 @@
             <div class="col-md-12 pt-3">
                 <div class="jumbotron jumbotron-fluid">
                     <h1 class="display-4 text-center">Ótima escolha!</h1>
-                        <p class="lead text-center"> 
-                            Obrigado por comprar na Mirror Fashion!
-                            Preencha seus dados para efetivar a compra
-                        </p>
+                    <p class="lead text-center"> 
+                        Obrigado por comprar na Mirror Fashion!
+                        Preencha seus dados para efetivar a compra
+                    </p>
                 </div>
             </div>
         </div> 
@@ -60,8 +60,20 @@
                             <dt>Tamanho</dt>
                             <dd>40</dd>
                             <dt>Preço</dt>
-                            <dd>R$129,90</dd>
+                            <dd id="preco">R$129,90</dd>
                         </dl>
+                    </div>
+                </div>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label for="qtd">Quantidade:</label>
+                            <input type="number" id="qtd" min="1" max="99" value="1" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="total">Total:</label>
+                            <output for="qtd preco" id="total" class="form-control">R$ 129,99</output>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -119,8 +131,8 @@
         </div>        
     </div>
 
-
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/total.js"></script>
 </body>
 </html>
