adicionando mais produtos em novidades e mais-vendidos e ajustes

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 				<figure>
 					<img src="img/destaque-home.png" alt="Promoção: Big City Night">
 				</figure>
+				<!--<a href="#" class="play"><button></button></a>
+				<a href="#" class="pause"><button></button></a>-->			
 			</section>			
 		</div>
 		
@@ -126,7 +128,56 @@
 							</figure>
 						</a>
 					</li>
-				</ol>			
+					<li>
+						<a href="produto9.html">
+							<figure>
+								<img src="img/produtos/miniatura9.png" alt="miniatura9">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+					<li>
+						<a href="produto10.html">
+							<figure>
+								<img src="img/produtos/miniatura10.png" alt="miniatura10">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+					<li>
+						<a href="produt11.html">
+							<figure>
+								<img src="img/produtos/miniatura11.png" alt="miniatura11">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+					<li>
+						<a href="produto12.html">
+							<figure>
+								<img src="img/produtos/miniatura12.png" alt="miniatura12">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+					<li>
+						<a href="produto13.html">
+							<figure>
+								<img src="img/produtos/miniatura13.png" alt="miniatura12">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+					<li>
+						<a href="produto14.html">
+							<figure>
+								<img src="img/produtos/miniatura14.png" alt="miniatura12">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+				</ol>
+				<button type="button">Mostrar Mais</button>				
 			</section>
 			
 			<!--Mais Vendidos-->
@@ -182,7 +233,56 @@
 							</figure>
 						</a>
 					</li>
-				</ol>			
+					<li>
+						<a href="produto13.html">
+							<figure>
+								<img src="img/produtos/miniatura13.png" alt="miniatura12">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+					<li>
+						<a href="produto14.html">
+							<figure>
+								<img src="img/produtos/miniatura14.png" alt="miniatura12">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+					<li>
+						<a href="produto1.html">
+							<figure>
+								<img src="img/produtos/miniatura1.png" alt="miniatura12">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+					<li>
+						<a href="produto2.html">
+							<figure>
+								<img src="img/produtos/miniatura2.png" alt="miniatura12">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+					<li>
+						<a href="produto3.html">
+							<figure>
+								<img src="img/produtos/miniatura3.png" alt="miniatura12">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+					<li>
+						<a href="produto4.html">
+							<figure>
+								<img src="img/produtos/miniatura4.png" alt="miniatura12">
+								<figcaption>Fuzz Cardigan por R$ 129,99</figcaption>
+							</figure>
+						</a>
+					</li>
+				</ol>
+				<button type="button">Mostrar Mais</button>	
 			</section>
 		</div>
 		
@@ -198,5 +298,10 @@
 				</ul>
 			</div>
 		</footer>
+
+		<!--JavaScript-->
+		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="js/home.js"></script>
+		<!--<script type="text/javascript" src="js/banner.js"></script>-->	
 	</body>
 </html>
