--- a/checkout.html
+++ b/checkout.html
@@ -83,7 +83,7 @@
                         <legend>Dados pessoais</legend>
                         <div class="form-group">
                             <label for="nome">Nome completo</label>
-                            <input type="text" class="form-control" id="nome" name="nome" autofocus required>
+                            <input type="text" class="form-control" id="nome" name="nome" autofocus required placeholder="Nome Completo">
                         </div>
                         <div class="form-group">
                             <label for="email">E-mail</label>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="form-group">
                             <label for="cpf">CPF</label>
-                            <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000.00">
+                            <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00" data-mask="999.999.999-99">
                         </div>
                         <div class="form-group custom-control custom-checkbox">
                             <input type="checkbox" class="custom-control-input" id="newsletter" value="sim" checked>
@@ -102,7 +102,7 @@
                         <legend>Dados de pagamento</legend>
                         <div class="form-group">
                             <label for="numero-cartao">Número do cartão - CVV</label>
-                            <input type="text" class="form-control" id="numero-cartao" name="numero-cartao" placeholder="0000 0000 0000 0000 - 000">
+                            <input type="text" class="form-control" id="numero-cartao" name="numero-cartao" placeholder="0000 0000 0000 0000 - 000" data-mask="9999 9999 9999 999 - 999">
                         </div>
                         <div class="form-group">
                             <div class="input-group mb-3">
@@ -133,6 +133,7 @@
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/inputmask-plugin.js"></script>
     <script type="text/javascript" src="js/total.js"></script>
 </body>
 </html>
