--- a/produto.html
+++ b/produto.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/produto.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@300&display=swap" rel="stylesheet">
     <title>Mirror Fashion</title>
 </head>
 <body>
