--- a/sobre.html
+++ b/sobre.html
@@ -108,6 +108,13 @@
 						<li>Mais de um milhão de funcionários em todo o mundo</li>
 					</ul>
 				</section>
+				<section class="videoMirror">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/Tb06abHE4hY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="425" height="350" frameborder="0"
+					scrolling="no" marginheight="0" marginwidth="0"
+					src="http://maps.google.com.br/maps?q=Jacarezinho&amp;output=embed">
+					</iframe>
+				</section>
 			</article>
 		</div>
 		<footer>
