--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 				<figure>
 					<img src="img/destaque-home.png" alt="Promoção: Big City Night">
 				</figure>
-				<!--<a href="#" class="play"><button></button></a>
-				<a href="#" class="pause"><button></button></a>-->			
+				<a href="#" class="pause"></a>
 			</section>			
 		</div>
 		
@@ -304,6 +303,6 @@
 		<!--JavaScript-->
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/home.js"></script>
-		<!--<script type="text/javascript" src="js/banner.js"></script>-->	
+		<script type="text/javascript" src="js/banner.js"></script>
 	</body>
 </html>
